fixed link alignment

--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,7 @@ button {
 }
 
 .logo-big {
+  padding: 0;
   max-width: 6em;
   vertical-align: middle;
   margin: 0 0.5em 0;
